# docs/swagger.yaml
@@ -20,6 +20,15 @@ definitions:
       snack_calories:
         type: number
     type: object
+  models.Cart:
+    properties:
+      product_variant_id:
+        type: string
+      quantity:
+        type: integer
+      user_id:
+        type: string
+    type: object
   models.CreateProductRequest:
     properties:
       brand:
@@ -236,6 +245,156 @@ paths:
       summary: Sign up
       tags:
       - auth
+  /cart:
+    delete:
+      consumes:
+      - application/json
+      description: delete cart item
+      parameters:
+      - description: product_variant_id
+        in: query
+        name: product_variant_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+      security:
+      - BasicAuth: []
+      - Bearer: []
+      summary: Delete cart item
+      tags:
+      - cart
+    get:
+      consumes:
+      - application/json
+      description: get cart items by user ID
+      parameters:
+      - description: Limit (1-100), default is 25
+        in: query
+        name: limit
+        type: integer
+      - description: Offset for pagination
+        in: query
+        name: offset
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+      security:
+      - BasicAuth: []
+      - Bearer: []
+      summary: Get cart items by user ID
+      tags:
+      - cart
+    post:
+      consumes:
+      - application/json
+      description: add cart item
+      parameters:
+      - description: product_variant_id
+        in: query
+        name: product_variant_id
+        required: true
+        type: string
+      - description: quantity
+        in: query
+        name: quantity
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.Cart'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+      security:
+      - BasicAuth: []
+      - Bearer: []
+      summary: Add cart item
+      tags:
+      - cart
+    put:
+      consumes:
+      - application/json
+      description: update cart item
+      parameters:
+      - description: product_variant_id
+        in: query
+        name: product_variant_id
+        required: true
+        type: string
+      - description: quantity
+        in: query
+        name: quantity
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+      security:
+      - BasicAuth: []
+      - Bearer: []
+      summary: Update cart item
+      tags:
+      - cart
   /dish:
     get:
       consumes:
@@ -526,6 +685,90 @@ paths:
       summary: Get ingredient by ID
       tags:
       - ingredient
+  /payment_method:
+    get:
+      consumes:
+      - application/json
+      description: Get payment methods
+      parameters:
+      - description: Limit (1-100), default is 25
+        in: query
+        name: limit
+        type: integer
+      - description: Offset for pagination
+        in: query
+        name: offset
+        type: integer
+      - description: 'Sort direction: asc or desc, default is asc'
+        in: query
+        name: sort_by
+        type: string
+      - description: 'Field to sort by, allowed: updated_at, default is updated_at'
+        in: query
+        name: order_by
+        type: string
+      produces:
+      - application/json
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+      security:
+      - BasicAuth: []
+      - Bearer: []
+      summary: Get payment methods
+      tags:
+      - payment_method
+  /payment_method/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Get payment method by ID
+      parameters:
+      - description: Payment method ID (UUID)
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.GeneralResponse'
+      security:
+      - BasicAuth: []
+      - Bearer: []
+      summary: Get payment method by ID
+      tags:
+      - payment_method
   /product:
     get:
       consumes:
@@ -797,7 +1040,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Delete product by id
+      description: Delete a product by its ID
       parameters:
       - description: Product ID (UUID)
         in: path
@@ -827,6 +1070,8 @@ paths:
       - BasicAuth: []
       - Bearer: []
       summary: Delete product
+      tags:
+      - product
     get:
       consumes:
       - application/json
@@ -937,6 +1182,8 @@ paths:
       - BasicAuth: []
       - Bearer: []
       summary: Approve product
+      tags:
+      - product
   /product/{id}/reject:
     put:
       consumes:
@@ -971,6 +1218,8 @@ paths:
       - BasicAuth: []
       - Bearer: []
       summary: Reject product
+      tags:
+      - product
   /product/me:
     get:
       consumes:
