# internal/handlers/dish.go
@@ -28,22 +28,22 @@ type DishResponse struct {
 	Total  int            `json:"total"`
 }
 
-// @Summary		Get dishes
-// @Description	Retrieve a list of dishes with filtering and sorting
-// @Tags			dish
-// @Security		BasicAuth
-// @Security		Bearer
-// @Accept			json
-// @Produce		json
-// @Param			limit		query		int		false	"Limit (1-100), default is 25"
-// @Param			offset		query		int		false	"Offset for pagination"
-// @Param			keyword		query		string	false	"Search keyword for name"
-// @Param			sort_by		query		string	false	"Sort direction: asc or desc"
-// @Param			order_by	query		string	false	"Field to sort by, allowed: updated_at"
-// @Success		200			{object}	response.GeneralResponse
-// @Failure		400			{object}	response.GeneralResponse
-// @Failure		500			{object}	response.GeneralResponse
-// @Router			/dish [get]
+//	@Summary		Get dishes
+//	@Description	Retrieve a list of dishes with filtering and sorting
+//	@Tags			dish
+//	@Security		BasicAuth
+//	@Security		Bearer
+//	@Accept			json
+//	@Produce		json
+//	@Param			limit		query		int		false	"Limit (1-100), default is 25"
+//	@Param			offset		query		int		false	"Offset for pagination"
+//	@Param			keyword		query		string	false	"Search keyword for name"
+//	@Param			sort_by		query		string	false	"Sort direction: asc or desc"
+//	@Param			order_by	query		string	false	"Field to sort by, allowed: updated_at"
+//	@Success		200			{object}	response.GeneralResponse
+//	@Failure		400			{object}	response.GeneralResponse
+//	@Failure		500			{object}	response.GeneralResponse
+//	@Router			/dish [get]
 func (h *DishHandler) GetDishs(ctx echo.Context) error {
 	t := time.Now().UTC()
 	defer func() {
@@ -98,19 +98,19 @@ func (h *DishHandler) GetDishs(ctx echo.Context) error {
 	})
 }
 
-// @Summary		Get dish by ID
-// @Description	Retrieve an dish by its ID
-// @Tags			dish
-// @Security		BasicAuth
-// @Security		Bearer
-// @Accept			json
-// @Produce		json
-// @Param			id	path		string	true	"Dish ID (UUID)"
-// @Success		200	{object}	response.GeneralResponse
-// @Failure		400	{object}	response.GeneralResponse
-// @Failure		404	{object}	response.GeneralResponse
-// @Failure		500	{object}	response.GeneralResponse
-// @Router			/dish/{id} [get]
+//	@Summary		Get dish by ID
+//	@Description	Retrieve an dish by its ID
+//	@Tags			dish
+//	@Security		BasicAuth
+//	@Security		Bearer
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"Dish ID (UUID)"
+//	@Success		200	{object}	response.GeneralResponse
+//	@Failure		400	{object}	response.GeneralResponse
+//	@Failure		404	{object}	response.GeneralResponse
+//	@Failure		500	{object}	response.GeneralResponse
+//	@Router			/dish/{id} [get]
 func (h *DishHandler) GetDishByID(ctx echo.Context) error {
 	t := time.Now().UTC()
 	defer func() {
@@ -132,23 +132,23 @@ func (h *DishHandler) GetDishByID(ctx echo.Context) error {
 	return response.ResponseSuccess(ctx, http.StatusOK, dish)
 }
 
-// @Summary		GetDishesByIngredientID
-// @Description	Retrieve a list of dishes by ingredient ID
-// @Tags			dish
-// @Security		BasicAuth
-// @Security		Bearer
-// @Accept			json
-// @Produce		json
-// @Param			limit		query		int		false	"Limit (1-100), default is 25"
-// @Param			offset		query		int		false	"Offset for pagination"
-// @Param			sort_by		query		string	false	"Sort direction: asc or desc, default is asc"
-// @Param			order_by	query		string	false	"Field to sort by, allowed: updated_at, default is updated_at"
-// @Param			id			path		string	true	"Ingredient ID (UUID)"
-// @Success		200			{object}	response.GeneralResponse
-// @Failure		400			{object}	response.GeneralResponse
-// @Failure		404			{object}	response.GeneralResponse
-// @Failure		500			{object}	response.GeneralResponse
-// @Router			/dish/{id}/ingredient [get]
+//	@Summary		GetDishesByIngredientID
+//	@Description	Retrieve a list of dishes by ingredient ID
+//	@Tags			dish
+//	@Security		BasicAuth
+//	@Security		Bearer
+//	@Accept			json
+//	@Produce		json
+//	@Param			limit		query		int		false	"Limit (1-100), default is 25"
+//	@Param			offset		query		int		false	"Offset for pagination"
+//	@Param			sort_by		query		string	false	"Sort direction: asc or desc, default is asc"
+//	@Param			order_by	query		string	false	"Field to sort by, allowed: updated_at, default is updated_at"
+//	@Param			id			path		string	true	"Ingredient ID (UUID)"
+//	@Success		200			{object}	response.GeneralResponse
+//	@Failure		400			{object}	response.GeneralResponse
+//	@Failure		404			{object}	response.GeneralResponse
+//	@Failure		500			{object}	response.GeneralResponse
+//	@Router			/dish/{id}/ingredient [get]
 func (h *DishHandler) GetDishesByIngredientID(ctx echo.Context) error {
 	t := time.Now().UTC()
 	defer func() {
@@ -213,19 +213,19 @@ func (h *DishHandler) GetDishesByIngredientID(ctx echo.Context) error {
 	})
 }
 
-// @Summary		Like dish
-// @Description	Like an dish
-// @Tags			dish
-// @Security		BasicAuth
-// @Security		Bearer
-// @Accept			json
-// @Produce		json
-// @Param			id	path		string	true	"Dish ID (UUID)"
-// @Success		200	{object}	response.GeneralResponse
-// @Failure		400	{object}	response.GeneralResponse
-// @Failure		404	{object}	response.GeneralResponse
-// @Failure		500	{object}	response.GeneralResponse
-// @Router			/dish/{id}/like [post]
+//	@Summary		Like dish
+//	@Description	Like an dish
+//	@Tags			dish
+//	@Security		BasicAuth
+//	@Security		Bearer
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"Dish ID (UUID)"
+//	@Success		200	{object}	response.GeneralResponse
+//	@Failure		400	{object}	response.GeneralResponse
+//	@Failure		404	{object}	response.GeneralResponse
+//	@Failure		500	{object}	response.GeneralResponse
+//	@Router			/dish/{id}/like [post]
 func (h *DishHandler) LikeDish(ctx echo.Context) error {
 	t := time.Now().UTC()
 	defer func() {
@@ -252,19 +252,19 @@ func (h *DishHandler) LikeDish(ctx echo.Context) error {
 	return response.ResponseSuccess(ctx, http.StatusOK, "Dish liked successfully.")
 }
 
-// @Summary		Unlike dish
-// @Description	Unlike an dish
-// @Tags			dish
-// @Security		BasicAuth
-// @Security		Bearer
-// @Accept			json
-// @Produce		json
-// @Param			id	path		string	true	"Dish ID (UUID)"
-// @Success		200	{object}	response.GeneralResponse
-// @Failure		400	{object}	response.GeneralResponse
-// @Failure		404	{object}	response.GeneralResponse
-// @Failure		500	{object}	response.GeneralResponse
-// @Router			/dish/{id}/unlike [post]
+//	@Summary		Unlike dish
+//	@Description	Unlike an dish
+//	@Tags			dish
+//	@Security		BasicAuth
+//	@Security		Bearer
+//	@Accept			json
+//	@Produce		json
+//	@Param			id	path		string	true	"Dish ID (UUID)"
+//	@Success		200	{object}	response.GeneralResponse
+//	@Failure		400	{object}	response.GeneralResponse
+//	@Failure		404	{object}	response.GeneralResponse
+//	@Failure		500	{object}	response.GeneralResponse
+//	@Router			/dish/{id}/unlike [post]
 func (h *DishHandler) UnlikeDish(ctx echo.Context) error {
 	t := time.Now().UTC()
 	defer func() {
